[project]
name = "cs453-project"
version = "0.1.0"
description = "MCP Server and Client Implementation using FastMCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."] 
